--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
         <div class="header-content">
             <h1>Our Business Name</h1>
             <nav>
@@ -16,7 +16,7 @@
                 </ul>
             </nav>
         </div>
-    
+    </header>
 
     <section id="hero">
         <div class="hero-content">
