--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Small Business Homepage</title>
+    <title>Lxo Business Homepage</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="header-content">
-            <h1>Our Business Name</h1>
+            <h1>Lxo company</h1>
             <nav>
                 <ul>
                     <li><a href="#services">Services</a></li>
@@ -20,7 +20,7 @@
 
     <section id="hero">
         <div class="hero-content">
-            <h2>Welcome to Our Business</h2>
+            <h2>Welcome to Lxo company</h2>
             <p>Your one-stop solution for all your needs.</p>
             <a href="#contact" class="hero-button">Get in Touch</a>
         </div>
@@ -28,7 +28,7 @@
 
     <section id="services">
         <h2>Our Services</h2>
-        <p>We offer a wide range of services to help your business grow:</p>
+        <p>We offer a range of services to help company grow:</p>
         <ul>
             <li>Consulting Services</li>
             <li>Professional Training</li>
@@ -38,17 +38,17 @@
 
     <section id="about">
         <h2>About Us</h2>
-        <p>We are a dedicated team with over 7 years of experience in business development and management. Our mission is to provide high-quality services tailored to each client's unique needs.</p>
+        <p>We are a dedicated team with over 5 years of experience in business development and management. Our mission is to provide high-quality services tailored to each client's unique needs.</p>
           </section>
 
     <section id="contact">
         <h2>Contact Us</h2>
         <p>Phone: (123) 456-7890</p>
-        <p>Email: contact@ourbusiness.com</p>
+        <p>Email: contact@Lxocompany.com</p>
     </section>
 
     <footer>
-        <p>© 2024 Small Business. All rights reserved.</p>
+        <p>© 2024 Lxo company. All rights reserved.</p>
     </footer>
 </body>
 </html>
